fix: menu overlapped by images (#184)
fix: menu overlapped by images
clean-up: remove old animation

--- a/_sass/config/_variables.scss
+++ b/_sass/config/_variables.scss
@@ -74,7 +74,5 @@ $button-base-height: 50px;
 $button-font-size: 1.1rem;
 $button-padding: 0.8rem 1.2rem;
 
-$header-z-index: 999;
-
 $nav-font-size-desktop: $base-font-size1;
 $subnav-font-size-desktop: $base-font-size;
